css/style.css
@charset "UTF-8";

@font-face {
    font-family: 'Lemon/Milk';
    src: url('../fonts/LemonMilk.ttf') format('truetype');
}

:root {
    --accent: #76dedf;
}

* {
    margin:  0;
    border:  0;
    padding: 0;
    outline: 0;
    list-style: none;
    text-decoration: none;
    text-rendering: optimizeLegibility;
    -webkit-user-select: none;
      -webkit-user-drag: none;
       -moz-user-select: none;
        -ms-user-select: none;
         -o-user-select: none;
            user-select: none;
    -webkit-webkit-font-smoothing: subpixel-antialised;
       -moz-webkit-font-smoothing: subpixel-antialised;
        -ms-webkit-font-smoothing: subpixel-antialised;
         -o-webkit-font-smoothing: subpixel-antialised;
}

::selection { background: #fff }

body {
    background: linear-gradient(#f1f1f1, #fff);
    height: 100vh;
    overflow: hidden;
}

[class^='\5f'], .wrapper {
    position: absolute;
}

.clock {
    cursor: default;
    height: 80px;
    display: grid;
    grid-template-columns: [time] 1fr [weather] auto;
    box-shadow: 0 5px 5px rgba(0, 0, 0, .05);
}

.clock .time {
    font-family: 'Roboto', sans-serif;
    grid-column: time;
    background: #fff;
    color: var(--accent);
    position: relative;
    overflow: hidden;
}

.time p:not([hour]) {
    color: #b8b8b8;
}

.time p[hour], .time p[mins] {
    font-size: 29px;
}

.time p[ord] {
    margin: 10px 0 0 10px;
    font-size: 14px;
}

.time p[hour], .time p[ord] {
    font-weight: 700;
}

.time p[mins] {
    font-weight: 300;
}

.clock .weather {
    color: #fff;
    width: 90px;
    grid-column: weather;
    background: var(--accent);
    font: 500 41px 'Lemon/Milk light', sans-serif;
    position: relative;
    overflow: hidden;
}

.clock .time, .clock .weather {
    display: flex;
    align-items: center;
    justify-content: center;
}

.wrapper {
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 555px;
    width: 400px;
    margin: auto;
    z-index: 1;
}

.panel {
    margin: 1em 0 0;
    height: 460px;
    background: url('../img/background.gif') center / cover;
    box-shadow: 0 5px 5px rgba(0, 0, 0, .15);
    overflow: hidden;
}

.panel::after {
    content: '';
    display: block;
    position: absolute;
    height: 50%;
    width: 100%;
    background: linear-gradient(transparent, rgba(255, 255, 255, 0.45));
    bottom: calc(0px + 4px);
}

.tabs {
    height: 100%;
    width: 100%;
    display: flex;
    position: relative;
}

.tabs .tab ul {
    width: 100%;
    height: 100%;
    z-index: 1;
    overflow-x: scroll;
}

.tabs .tab ul::-webkit-scrollbar {
    width: 3px;
    background: rgba(0, 0, 0, .3);
}

.tabs .tab ul::-webkit-scrollbar-thumb {
    background: #fff;
}

.tab {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
    max-height: 90%;
    overflow-y: hidden;
}

.tab i {
    --size: -4px;
    --tab: #838b95;
    cursor: pointer;
    width: 100%;
    height: 50px;
    background: #fff;
    box-shadow: inset 0 var(--size) var(--tab);
    transition: all .3s ease-in-out;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 3;
}

.tab ul a {
    --slide: -50px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #444;
    width: 100%;
    height: 50px;
    background: #fff;
    font: 500 15px 'Roboto', sans-serif;
    box-shadow: 0 -5px 10px 0 rgba(0, 0, 0, .05);
    margin: var(--slide) 0 0 0;
    transition: all .2s ease-in-out;
}

.tab:hover ul a {
    --slide: 0;
}

.tab ul a:hover {
    background: #eee;
    box-shadow: none;
}

.tab:hover i { color: var(--tab); }

.tabs ul:nth-child(2) i { --tab: #ff7ea2; }
.tabs ul:nth-child(3) i { --tab: #7afec1; }
.tabs ul:nth-child(4) i { --tab: #b95eff; }

.tab:hover i {
    --size: -10px;
    z-index: 1;
    /*margin: -10px 0 0 0;*/
    height: 60px;
}

#search {
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, .8);
    z-index: 99;
    opacity: 0;
    visibility: hidden;
    top: -100%;
    transition: all .5s ease-in-out;
}

#search.active {
    top: 0;
    opacity: 1;
    visibility: visible;
}

#search div {
    position: relative;
    width: 80%;
}

#search input {
    width: 100%;
    box-shadow: inset 0 -2px #a0a0a0;
    padding: .5em 0;
    background: none;
    font: 500 22px 'Roboto', sans-serif;
    letter-spacing: 1px;
    color: #000;
}

#search input:focus {
    box-shadow: inset 0 -2px #2f3333;
}

#search input::selection {
    background: #000;
    color: #fff;
}

#search .close {
    background: 0;
    border: 0;
    outline: 0;
    color: #000;
    position: absolute;
    right: 0;
    cursor: pointer;
    top: 15px;
}

#search .close:hover {
    filter: opacity(.5);
}

.search-engines {
    list-style: none;
    color: #8a8a8a;
    display: block;
    display: flex;
    top: 50px;
    left: 0;
    margin: 1em 0 0 0;
}

.search-engines li p {
    cursor: default;
    transition: all .2s;
    font-size: 12px;
    font-family: 'Roboto', sans-serif;
}

.search-engines li {
    margin: 0 1em 0 0;
}

.search-engines li.active {
    color: #000;
    font-weight: 700;
}

.wave,
.wave::before,
.wave::after {
    content: '';
    position: absolute;
    top: 50%;
    left: 50%;
    width: 250vw;
    height: 250vw;
    margin-left: -125vw;
    transform-origin: 50% 50%;
    background: linear-gradient(to bottom, rgba(118, 222, 223, 0.2), transparent);
    border-radius: 38% 42%;
    animation: spin 16s infinite linear;
}

.wave::before {
    width: 105%;
    height: 95%;
    margin-top: -125vw;
    transform-origin: 49% 51%;
    border-radius: 40% 38%;
    animation: spin 13s infinite linear;
}

.wave::after {
    width: 102%;
    height: 98%;
    margin-top: -125vw;
    transform-origin: 51% 49%;
    border-radius: 48% 42%;
    animation: spin 10s infinite linear;
}

@keyframes spin {
    100% { transform: rotate(360deg); }
}

.stats {
    position: absolute;
    background: var(--accent);
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    right: 100%;
    transition: all .4s ease-in-out;
}

.stats p[description] {
    font: 300 22px 'Roboto', sans-serif;
    text-transform: capitalize;
    letter-spacing: .5px;
}

.stats p {
    color: #fff !important;
}

.weather p[weather] {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #fff;
    width: 100%;
    height: 100%;
    right: -100%;
    margin: 0 0 0 1em;
    transition: all .4s ease-in-out;
}

.clock:hover .stats {
    right: 0;
}

.clock:hover .weather p[weather] {
    right: 0;
}

.weather p[weather] i[sunny] {
    color: #ff4b8d !important;
}

.weather p[weather] i[cloudy] {
    color: #76dedf !important;
}

.stats p[location] {
    font: 700 12px 'Roboto', sans-serif;
    text-transform: capitalize;
}

.stats .date {
    margin: 0 1.5em 0 0;
    text-align: center;
    box-shadow: inset -2px 0 0 #fff;
    padding: .1em 2em 0 0;
}

.stats .date p[month] {
    font-size: 13px;
}

.stats .date p[day] {
    font-weight: 700;
    font-size: 24px;
}

.settings {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    /*background: rgba(255, 255, 255, .8);*/
    background: rgba(0, 0, 0, .7);
    width: 100%;
    height: 100%;
    top: -150%;
    visibility: hidden;
    opacity: 0;
    transition: all .8s ease-in-out;
    z-index: 99;
}

.config {
    position: absolute;
    width: 400px;
    height: 220px;
    background: #fff;
    box-shadow: 0 3px 10px rgba(0, 0, 0, .1);
    padding: 1em;
    box-sizing: border-box;
}

.settings.active {
    top: 0;
    opacity: 1;
    visibility: visible;
}

.config .close {
    background: 0;
    border: 0;
    height: 24px;
    float: right;
    outline: 0;
    cursor: pointer;
}

.config .close:hover {
    opacity: .5;
}

.config h1 {
    font: 500 14px 'Roboto', sans-serif;
    text-transform: uppercase;
    padding: 4px;
}

.accent-color {
    margin: 1.5em 0 1em 0;
}

.config input {
    width: calc(100% - 20px);
    border: 0;
    outline: 0;
    box-shadow: 0 1px #ccc;
    background: 0;
    transition: all .1s;
    padding: .5em 0;
    font: 400 13px 'Roboto', sans-serif;
}

.config input:focus {
    box-shadow: 0 2px var(--accent);
}

.config label {
    font: 500 10px 'Roboto', sans-serif;
    text-transform: uppercase;
    letter-spacing: .5px;
    color: grey;
}

.open-config, .open-search {
    background: 0;
    border: 0;
    outline: 0;
    cursor: pointer;
    height: 24px;
    transition: all .3s;
    color: grey;
}

.open-search:hover {
    color: #000;
}

.open-config:hover {
    transform: rotate(90deg);
    color: #000;
}

.tools {
    display: flex;
    justify-content: space-between;
    padding: .5em;
}

